[gd_scene load_steps=7 format=3 uid="uid://gqnw4wg66ygh"]

[ext_resource type="Script" uid="uid://g4tdwcvfsvdb" path="res://scripts/ui/inventory.gd" id="1_avmd0"]
[ext_resource type="PackedScene" uid="uid://mil6hi586vw6" path="res://scenes/ui/item_slot.tscn" id="1_s6ek7"]
[ext_resource type="PackedScene" uid="uid://b4u7qcpuyw0fj" path="res://scenes/ui/equipment_slot.tscn" id="2_xeaml"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_avmd0"]
border_width_left = 15
border_width_top = 15
border_width_right = 15
border_width_bottom = 15
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_avmd0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xeaml"]

[node name="Inventory" type="PanelContainer"]
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.25
anchor_right = 0.8
anchor_bottom = 0.75
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_avmd0")
script = ExtResource("1_avmd0")

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 2
current_tab = 0

[node name="Inventory" type="VBoxContainer" parent="TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Inventory"]
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="EquipmentContainer1" type="VBoxContainer" parent="TabContainer/Inventory/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="HeadSlot" parent="TabContainer/Inventory/HBoxContainer/EquipmentContainer1" instance=ExtResource("2_xeaml")]
layout_mode = 2
equipment_type = 2

[node name="ChestSlot" parent="TabContainer/Inventory/HBoxContainer/EquipmentContainer1" instance=ExtResource("2_xeaml")]
layout_mode = 2
equipment_type = 3

[node name="LegsSlot" parent="TabContainer/Inventory/HBoxContainer/EquipmentContainer1" instance=ExtResource("2_xeaml")]
layout_mode = 2
equipment_type = 4

[node name="FeetSlot" parent="TabContainer/Inventory/HBoxContainer/EquipmentContainer1" instance=ExtResource("2_xeaml")]
layout_mode = 2
equipment_type = 5

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Inventory/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="PlayerDisplayContainer" type="SubViewportContainer" parent="TabContainer/Inventory/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="PlayerDisplay" type="SubViewport" parent="TabContainer/Inventory/HBoxContainer/VBoxContainer/PlayerDisplayContainer"]
handle_input_locally = false
size = Vector2i(300, 400)
render_target_update_mode = 4

[node name="OffHand" parent="TabContainer/Inventory/HBoxContainer/VBoxContainer" instance=ExtResource("1_s6ek7")]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="EquipmentContainer2" type="VBoxContainer" parent="TabContainer/Inventory/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="NeckSlot" parent="TabContainer/Inventory/HBoxContainer/EquipmentContainer2" instance=ExtResource("2_xeaml")]
layout_mode = 2
equipment_type = 2

[node name="BackSlot" parent="TabContainer/Inventory/HBoxContainer/EquipmentContainer2" instance=ExtResource("2_xeaml")]
layout_mode = 2
equipment_type = 3

[node name="WaistSlot" parent="TabContainer/Inventory/HBoxContainer/EquipmentContainer2" instance=ExtResource("2_xeaml")]
layout_mode = 2
equipment_type = 4

[node name="AnkleSlot" parent="TabContainer/Inventory/HBoxContainer/EquipmentContainer2" instance=ExtResource("2_xeaml")]
layout_mode = 2
equipment_type = 5

[node name="HSeparator" type="HSeparator" parent="TabContainer/Inventory"]
layout_mode = 2
theme_override_constants/separation = 50
theme_override_styles/separator = SubResource("StyleBoxEmpty_avmd0")

[node name="InventorySlotContainer" type="GridContainer" parent="TabContainer/Inventory"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 9

[node name="ItemSlot1" parent="TabContainer/Inventory/InventorySlotContainer" instance=ExtResource("1_s6ek7")]
layout_mode = 2

[node name="ItemSlot2" parent="TabContainer/Inventory/InventorySlotContainer" instance=ExtResource("1_s6ek7")]
layout_mode = 2

[node name="ItemSlot3" parent="TabContainer/Inventory/InventorySlotContainer" instance=ExtResource("1_s6ek7")]
layout_mode = 2

[node name="ItemSlot4" parent="TabContainer/Inventory/InventorySlotContainer" instance=ExtResource("1_s6ek7")]
layout_mode = 2

[node name="ItemSlot5" parent="TabContainer/Inventory/InventorySlotContainer" instance=ExtResource("1_s6ek7")]
layout_mode = 2

[node name="ItemSlot6" parent="TabContainer/Inventory/InventorySlotContainer" instance=ExtResource("1_s6ek7")]
layout_mode = 2

[node name="ItemSlot7" parent="TabContainer/Inventory/InventorySlotContainer" instance=ExtResource("1_s6ek7")]
layout_mode = 2

[node name="ItemSlot8" parent="TabContainer/Inventory/InventorySlotContainer" instance=ExtResource("1_s6ek7")]
layout_mode = 2

[node name="ItemSlot9" parent="TabContainer/Inventory/InventorySlotContainer" instance=ExtResource("1_s6ek7")]
layout_mode = 2

[node name="ItemSlot10" parent="TabContainer/Inventory/InventorySlotContainer" instance=ExtResource("1_s6ek7")]
layout_mode = 2

[node name="ItemSlot11" parent="TabContainer/Inventory/InventorySlotContainer" instance=ExtResource("1_s6ek7")]
layout_mode = 2

[node name="ItemSlot12" parent="TabContainer/Inventory/InventorySlotContainer" instance=ExtResource("1_s6ek7")]
layout_mode = 2

[node name="ItemSlot13" parent="TabContainer/Inventory/InventorySlotContainer" instance=ExtResource("1_s6ek7")]
layout_mode = 2

[node name="ItemSlot14" parent="TabContainer/Inventory/InventorySlotContainer" instance=ExtResource("1_s6ek7")]
layout_mode = 2

[node name="ItemSlot15" parent="TabContainer/Inventory/InventorySlotContainer" instance=ExtResource("1_s6ek7")]
layout_mode = 2

[node name="ItemSlot16" parent="TabContainer/Inventory/InventorySlotContainer" instance=ExtResource("1_s6ek7")]
layout_mode = 2

[node name="ItemSlot17" parent="TabContainer/Inventory/InventorySlotContainer" instance=ExtResource("1_s6ek7")]
layout_mode = 2

[node name="ItemSlot18" parent="TabContainer/Inventory/InventorySlotContainer" instance=ExtResource("1_s6ek7")]
layout_mode = 2

[node name="ItemSlot19" parent="TabContainer/Inventory/InventorySlotContainer" instance=ExtResource("1_s6ek7")]
layout_mode = 2

[node name="ItemSlot20" parent="TabContainer/Inventory/InventorySlotContainer" instance=ExtResource("1_s6ek7")]
layout_mode = 2

[node name="ItemSlot21" parent="TabContainer/Inventory/InventorySlotContainer" instance=ExtResource("1_s6ek7")]
layout_mode = 2

[node name="ItemSlot22" parent="TabContainer/Inventory/InventorySlotContainer" instance=ExtResource("1_s6ek7")]
layout_mode = 2

[node name="ItemSlot23" parent="TabContainer/Inventory/InventorySlotContainer" instance=ExtResource("1_s6ek7")]
layout_mode = 2

[node name="ItemSlot24" parent="TabContainer/Inventory/InventorySlotContainer" instance=ExtResource("1_s6ek7")]
layout_mode = 2

[node name="ItemSlot25" parent="TabContainer/Inventory/InventorySlotContainer" instance=ExtResource("1_s6ek7")]
layout_mode = 2

[node name="ItemSlot26" parent="TabContainer/Inventory/InventorySlotContainer" instance=ExtResource("1_s6ek7")]
layout_mode = 2

[node name="ItemSlot27" parent="TabContainer/Inventory/InventorySlotContainer" instance=ExtResource("1_s6ek7")]
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="TabContainer/Inventory"]
layout_mode = 2
theme_override_constants/separation = 120
theme_override_styles/separator = SubResource("StyleBoxEmpty_xeaml")

[node name="Crafting" type="VBoxContainer" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="Behavior" type="VBoxContainer" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2
